--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ nav {
     position: fixed;
     width: 100%;
     z-index: 1000;
-    box-shadow: 10px -6px 15px black!important;
+    box-shadow: 10px -6px 15px black !important;
 }
 
 .first__navbar-noActiveD {
@@ -41,7 +41,7 @@ nav {
 }
 
 .first__navbar-noActiveM .second__navbar {
-    background:rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 1);
 }
 
 .first__navbar-ActiveM {
@@ -236,7 +236,7 @@ nav {
 .about {
     background: url('../img/aboutBg.png') 110% 40%/60% no-repeat;
     padding: 60px 15px;
-    background:#f5f5f5;
+    background: #f5f5f5;
 }
 
 .about__title h3 {
@@ -294,7 +294,8 @@ nav {
     padding: 0 15px;
 }
 
-.swiper-overlay, .static-overlay {
+.swiper-overlay,
+.static-overlay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -420,6 +421,7 @@ nav {
     color: #ffffff;
     border-color: #157841;
     padding: 0.75rem 1rem;
+    text-align: center;
 }
 
 .age_table div {
@@ -429,12 +431,13 @@ nav {
 .age_table p {
     padding: 20px 10px 20px 10px;
     min-height: 90px;
+    text-align: center;
 }
 
 
 .age_table .table {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
@@ -465,7 +468,8 @@ nav {
     cursor: pointer;
 }
 
-.service .card:after, .service .card:before {
+.service .card:after,
+.service .card:before {
     height: 100%;
     width: 100%;
     position: absolute;
@@ -562,7 +566,7 @@ footer .container {
     border-radius: 50%;
     position: relative;
     overflow: hidden;
-    transition:  0.5s;
+    transition: 0.5s;
 }
 
 .footer__icons a i {
@@ -615,7 +619,8 @@ footer .container {
     transition: 0.3s ease-out;
 }
 
-.copyright span, .copyright p {
+.copyright span,
+.copyright p {
     color: #000;
     letter-spacing: 0.1px;
     font-weight: 600;
@@ -675,7 +680,8 @@ footer .container {
     background-color: #FBFBFB;
 }
 
-#contact-us .contact-info, #contact-form {
+#contact-us .contact-info,
+#contact-form {
     padding: 30px;
     box-shadow: #0000001f 0px 1px 6px 1px;
     border-radius: 10px;
@@ -713,7 +719,8 @@ footer .container {
     margin: 50px 0;
 }
 
-#contact-form input, #contact-form textarea {
+#contact-form input,
+#contact-form textarea {
     width: 100%;
     font-size: 14px;
     font-weight: 400;
@@ -750,12 +757,169 @@ footer .container {
     border: none;
 }
 
-#contact-form input:focus, #contact-form textarea:focus {
+#contact-form input:focus,
+#contact-form textarea:focus {
     border: 1px solid #ea1825;
 }
 
 .select-wrapper {
-    padding: 0!important;
+    padding: 0 !important;
+}
+
+
+/*********************Styling News Start*******************/
+.news {
+    background-color: #f9f9f9;
+    padding: 60px 15px;
+    display: block;
+    overflow: hidden;
+}
+
+.news .owl-carousel .item {
+    height: auto;
+    max-width: 571px;
+    min-height: 281px;
+    background-color: #fff;
+    border-radius: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    padding: 30px;
+    display: flex;
+}
+
+.news .owl-carousel .item .news-grid {
+    grid-column-gap: 16px;
+    grid-row-gap: 0px;
+    grid-template-rows: auto;
+    grid-template-columns: 50% 50%;
+    grid-auto-columns: 1fr;
+    display: grid;
+}
+
+.news-date {
+    color: #c31c4b;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.news-title {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px
+}
+
+.news-content {
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    grid-template-rows: min-content min-content auto;
+    grid-template-columns: 1fr;
+    grid-auto-rows: min-content;
+    grid-auto-columns: 1fr;
+    display: grid;
+}
+
+.news-desc {
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    color: #565656 !important;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
+}
+
+.news-btn {
+    margin-top: 18px;
+    color: #c31c4b;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.news-image-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 5px;
+}
+
+.news-all-btn {
+    background-color: #a71840;
+    min-width: 150px;
+    color: #f9f9f9;
+    text-align: center;
+    background-color: #c31c4b;
+    border-radius: 30px;
+    padding: 12px 32px;
+    font-size: 14px;
+    line-height: 22px;
+    display: inline-block;
+    margin-top: 50px;
+}
+
+.news .owl-nav {
+    position: absolute;
+    top: -90px;
+    right: 0;
+}
+
+.news .owl-nav span {
+    font-size: 20px;
+}
+
+.news .owl-nav button {
+    width: 45px;
+    height: 45px;
+    color: #000;
+    background-color: #fff !important;
+    border-radius: 100px !important;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.news .owl-theme .owl-nav [class*="owl-"]:hover {
+    background: rgb(134, 151, 145);
+    color: inherit;
+    text-decoration: none;
+}
+
+.news-text {
+    width: 473px;
+    margin-bottom: 45px;
+}
+
+.news-text h3 {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 42px;
+}
+
+.news-text p {
+    color: #333;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.news .owl-carousel::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100vw;
+    z-index: 2;
+    left: 0;
+    background: #f9f9f9;
+    transform: translate(-100%, 0);
+}
+
+.news .owl-carousel .owl-stage-outer {
+    overflow: visible;
 }
 
 @media only screen and (max-width: 900px) {
@@ -763,10 +927,6 @@ footer .container {
     .advantages .box_content p {
         font-size: 16px;
         color: #fff;
-    }
-
-    .age_table .table {
-        grid-template-columns: repeat(4, 1fr);
     }
 }
 
@@ -798,7 +958,8 @@ footer .container {
         display: flex;
     }
 
-    .header__title h2,.header__title h4 {
+    .header__title h2,
+    .header__title h4 {
         font-size: 30px;
     }
 
@@ -822,6 +983,19 @@ footer .container {
         bottom: 15px;
         transition: 0.3s ease-in-out;
     }
+
+    .news-grid {
+        display: flex !important;
+        flex-direction: column !important;
+    }
+
+    .news-content {
+        grid-row-gap: 0;
+    }
+
+    .news-all-btn {
+        margin-top: 20px;
+    }
 }
 
 
@@ -831,11 +1005,13 @@ footer .container {
         font-size: 40px;
     }
 
-    .stars .swiper-slide { 
-        padding: 0 10px 
+    .stars .swiper-slide {
+        padding: 0 10px
     }
 
-    .about, .agecategory  {
+    .about,
+    .agecategory,
+    .news {
         padding: 30px 10px;
     }
 
@@ -872,14 +1048,15 @@ footer .container {
     .header__title h4,
     .header__title h2,
     .advantages h2,
-    .projects h3, .service-title {
+    .projects h3,
+    .service-title {
         font-size: 20px;
     }
 
     footer .container {
         padding: 0 10px;
     }
-    
+
     .footer__icons a {
         width: 50px;
         height: 50px;
@@ -892,7 +1069,7 @@ footer .container {
     .footer__icons a:hover i {
         color: inherit;
     }
-    
+
     .footer__icons a:hover {
         transform: inherit;
         border: inherit;
