--- a/css/style.css
+++ b/css/style.css
@@ -777,24 +777,16 @@ footer .container {
 
 .news .owl-carousel .item {
     height: auto;
-    max-width: 571px;
-    min-height: 281px;
     background-color: #fff;
     border-radius: 5px;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    padding: 30px;
     display: flex;
 }
 
-.news .owl-carousel .item .news-grid {
-    grid-column-gap: 16px;
-    grid-row-gap: 0px;
-    grid-template-rows: auto;
-    grid-template-columns: 50% 50%;
-    grid-auto-columns: 1fr;
-    display: grid;
+.news-grid img {
+    width: 100%;
 }
 
 .news-date {
